# aurora

./: .gitignore  CMakeLists.txt  LICENSE  README.md  aurora.sublime-project  aurora.sublime-workspace  build.sh  cmake-build-readme.txt  compile-ubuntu.sh  compile.sh  develop.bat  develop.sh  go.mod  go.sum
api/: index.js  package.json
api/db/: save.js
api/db/functions/: add.js  get.js  index.js  serializeObj.js
api/db/init/: index.js  initializeTables.js
api/db/tables/: apps.js  executables.js  index.js
api/game/: index.js  steamConstants.js
api/ipc/: constants.js  games.js  index.js  isDev.js
api/utils/: filterGameFiles.js  getHomeDir.js  searchFile.js
client/: .gitignore  CMakeLists.txt  compile-client.sh  compile-deprecated.sh  compile-script.sh  compile.sh
client/Debug/res/styles/: game.json
client/include/: Entity.hpp  Server.hpp
client/include/Keyboard/: KeyboardController.hpp
client/include/Pages/: MainMenu.hpp
client/res/styles/: game.json
client/src/: Entity.cpp  KeyboardController.cpp  MainMenu.cpp  RenderWindow.cpp  Server.cpp  entity.cpp  keyboardController.cpp  main.cpp  renderWindow.cpp
client/src/Controllers/ControllerState/: ControllerState.cpp  ControllerState.hpp
client/src/Controllers/GamepadController/: GamepadController.cpp  GamepadController.hpp
client/src/Controllers/KeyboardController/: KeyboardController.cpp  KeyboardController.hpp
client/src/Networking/Server/: Server.cpp  Server.hpp
client/src/Pages/MainMenu/: MainMenu.cpp  MainMenu.hpp
client/src/Rendering/Easing/: Easing.c  Easing.h
client/src/Rendering/Entity/: Entity.cpp  Entity.hpp
client/src/Rendering/Graphics/: Graphics.cpp  Graphics.hpp
client/src/Rendering/RenderWindow/: RenderWindow.cpp  RenderWindow.hpp
client/src/Rendering/Text/: Text.hpp
client/src/Utilities/Helpers/: Helpers.hpp
client/src/Utilities/Math/: Math.hpp
client/src/Utilities/Sound/: Sound.c
include/: Entity.hpp  GamepadDirectionEvent.hpp  Math.hpp  RenderWindow.hpp  Text.hpp  Utils.hpp
include/Animation/: Bezier.h
include/Gamepad/: GamepadController.hpp  GamepadDirectionEvent.hpp
launcher/: .gitignore  development.py  main.go
launcher/Helpers/: client.py  constants.py  event_handlers.py  logger.py  server.py
new_client/: main.love  main.lua  package.ps1  setup.txt
new_client/Drawing/: RoundedRect.lua
new_client/Requests/: GET.lua
old-launcher/: .gitignore  development.py  requirements.txt
old-launcher/Helpers/: client.py  event_handlers.py  root_dir.py  server.py
old-server/: .gitignore  main.py  requirements.txt  run.py
old-server/Database/: database.py  migration.py
old-server/Database/Migrations/: 2021_09_26_23_02_25_AddSettingsTable.py
old-server/Database/Models/: System.py
old-server/Integrations/: steam.py
old-server/Resources/: SettingsResource.py  SteamResource.py
old-server/Utilities/: logger.py
old-server/Utilities/constants/: __init__.py  steam_constants.py
res/styles/: game.json
server/: .gitignore  aurora.db  main.go  main.py  requirements.txt  run.py
server/Constants/: Constants.go  Constants.json
server/Controllers/: Controllers.go
server/Controllers/Settings/: SettingsController.go
server/Controllers/Steam/: SteamController.go
server/Database/: Database.go  aurora.db  database.py  migration.py
server/Database/Migrations/: 2021_09_19_18_33_10_CreateSettingsTable.py  TestCreateMigrationsTable.py  TestCreateSettingsTable.py
server/Database/Seeders/: WallpaperSettings.py
server/Integrations/: Steam.go  steam.py
server/Integrations/Steam/: SteamIntegration.go
server/Models/: Setting.go
server/Utilities/: DefaultSettings.go  logger.py  root_dir.py
server/Utilities/constants/: __init__.py  steam_constants.py
server/database/: database.py
src/: easing.c  entity.cpp  gamepadController.cpp  gamepadDirectionEvent.cpp  main.cpp  renderWindow.cpp  text.cpp
src/gamepad/: gamepadDirectionEvent.cpp
utilities/: development.py  helpers.py  requirements.txt
